# devdeck

cad/logo.vectornator/: Artboard0.json  Document.json  UndoHistory.json
monitor/: CMakeLists.txt  devdeck-monitor.cpp  life.cpp  life.h  smd.cpp  smd.h  smd.pio
os/manjaro/: config  packages
